--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Edit Profile Data"
+        android:text="Edit Profile Picture"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="26sp" />
